--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-- '3.5'
+- '2.7'
 install:
-- pip3 install .
+- pip install .
 script:
-- python3 setup.py test
+- python setup.py test
 deploy:
 - provider: releases
   api_key:
